# ARGent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 389108adeb63_initial_schema.py  a1b2c3d4e5f6_add_message_external_id.py  b2c3d4e5f6g7_replace_telegram_with_phone.py  c3d4e5f6g7h8_add_verification_tokens.py  d4e5f6g7h8i9_add_web_inbox_support.py
docs/: AGENT_PHILOSOPHY.md  ARCHITECTURE.md  DATA_ARCHITECTURE.md  FEATURES.md  FEATURES_AND_REQUIREMENTS.md  IMMERSION_DESIGN.md  OPENING_WEEK_TIMELINE.md  PROJECT_VISION.md  README.md  ROADMAP.md  STORY_SYSTEM.md  TECHNOLOGY_CHOICES.md  WEB_INBOX.md
docs/agents/: AGENTS.md
docs/story/: IMMERSION.md  PREMISE.md  STORY_SYSTEM.md  THE_TRUTH.md  TIMELINE.md
docs/story/agents/: _TEMPLATE.md  ember.md  miro.md
infrastructure/k8s/: README.md
infrastructure/k8s/prd/: configmap.yaml  deployment.yaml  ghcr-creds.yaml.tpl  image-policy.yaml  image-repository.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  sealed-image-pull-secret.yaml  sealed-secrets.yaml  secrets.yaml.tpl  service.yaml
scripts/: test_first_contact.py
src/argent/: __init__.py  config.py  database.py  main.py
src/argent/agents/: __init__.py  base.py  ember.py  miro.py
src/argent/api/: __init__.py  evidence.py  health.py  inbox.py  onboarding.py  pages.py  webhooks.py
src/argent/models/: __init__.py  base.py  player.py  verification.py
src/argent/scheduler/: __init__.py  events.py  executor.py  handlers.py  tasks.py
src/argent/services/: __init__.py  base.py  classification.py  dashboard.py  dispatcher.py  email.py  evidence.py  knowledge.py  sms.py  trust.py  verification.py  web_inbox.py
src/argent/static/: evidence.css  robots.txt  style.css
src/argent/story/: __init__.py  persona.py  prompt_builder.py
src/argent/templates/: base.html  compose.html  conversation.html  evidence.html  hub.html  inbox.html  landing.html  login.html  register.html  start.html  text.html  text_thread.html  thread.html  verify.html  (+2 more)
tests/: __init__.py  conftest.py  test_health.py
tests/agents/: test_ember.py
tests/api/: __init__.py  test_webhooks.py
tests/services/: __init__.py  test_email.py  test_sms.py
(+6 files in other folders)
